--- a/package.json
+++ b/package.json
@@ -1,50 +1,76 @@
 {
-  "name": "xaviabot",
-  "version": "2.4.2",
-  "description": "A Facebook Messenger Bot",
+  "name": "auto-messenger-bot",
+  "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "type": "module",
-  "engines": {
-    "node": ">=16"
-  },
-  "scripts": {
+  "scripts": { 
     "start": "node index.js",
-    "startDev": "node --trace-warnings --experimental-import-meta-resolve --expose-gc core/_build.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "xaviabot",
-    "fca-unofficial",
-    "facebook-chat-api",
-    "chatbot",
-    "facebook",
-    "messenger"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/XaviaTeam/XaviaBot.git"
-  },
-  "author": "RFS-ADRENO",
-  "license": "MIT",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@replit/database": "^2.0.2",
-    "@xaviabot/fca-unofficial": "^1.3.33",
-    "axios": "^1.6.7",
-    "canvas": "^2.10.1",
-    "cors": "^2.8.5",
-    "crypto-js": "^4.1.1",
-    "dotenv": "^16.0.3",
+    "@types/node": "^18.0.6",
+    "axios": "^1.6.5",
+    "bluebird": "^2.11.0",
+    "body-parser": "^1.20.2",
+    "chalk": "^3.0.0",
+    "cheerio": "^0.22.0",
+    "child_process": "^1.0.2",
     "express": "^4.18.2",
-    "express-rate-limit": "^6.7.0",
-    "ffmpeg-static": "^5.1.0",
-    "fluent-ffmpeg": "^2.1.2",
-    "helmet": "^6.0.0",
-    "js-yaml": "^4.1.0",
-    "moment-timezone": "^0.5.38",
-    "mongoose": "^7.5.0",
-    "node-cron": "^3.0.2",
-    "semver": "^7.3.8",
-    "string-similarity": "^4.0.4",
-    "wikijs": "^6.4.0",
-    "@distube/ytdl-core": "^4.14.4"
+    "fs-extra": "^11.1.1",
+    "hercai": "^12.2.0",
+    "unlimited-ai": "^2.0.1",
+    "@ruingl/gptx": "^1.0.6",
+    "gpti": "^2.1.8",
+    "ws3-fca": "^1.0.25",
+    "https-proxy-agent": "^4.0.0",
+    "mqtt": "^4.3.8",
+    "node-cron": "^3.0.3",
+    "node-fetch": "^3.2.6",
+    "npmlog": "^7.0.1",
+    "pastebin-api": "^7.0.0",
+    "request": "^2.53.0",
+    "websocket-stream": "^5.5.0",
+    "soundcloud-downloader": "^1.0.0",
+    "youtube-search-api": "^1.1.0",
+    "youtubei.js": "^10.5.0",
+    "simple-youtube-api": "^5.2.1",
+    "ytdl-core": "^4.11.2"
+  },
+  "devDependencies": {
+    "eslint": "^7.5.0",
+    "mocha": "^7.0.1",
+    "prettier": "^1.11.1"
+  },
+  "eslintConfig": {
+    "env": {
+      "commonjs": true,
+      "es2021": true,
+      "node": true
+    },
+    "extends": "eslint:recommended",
+    "parserOptions": {
+      "ecmaVersion": 13
+    },
+    "rules": {
+      "no-prototype-builtins": 0,
+      "no-unused-vars": 1,
+      "comma-dangle": 1,
+      "no-redeclare": 0,
+      "prefer-const": 1,
+      "no-useless-escape": 0,
+      "no-mixed-spaces-and-tabs": 0,
+      "semi": 1,
+      "no-useless-catch": 0,
+      "no-empty": 0,
+      "use-isnan": 0,
+      "no-extra-semi": 1,
+      "no-async-promise-executor": 0,
+      "no-unreachable": 1,
+      "valid-typeof": 0,
+      "no-case-declarations": 0
+    }
   }
 }
