--- a/config/config.main.json
+++ b/config/config.main.json
@@ -16,13 +16,13 @@
     "LANGUAGE": "en_US",
     "LOG_LEVEL": 1,
     "MODERATORS": [
-        "100008907121641"
+        "61564459952029"
     ],
     "ABSOLUTES": [
-        "100008907121641"
+        "61564459952029"
     ],
-    "NAME": "Xavia",
-    "PREFIX": "x",
+    "NAME": "Yhanna Bot",
+    "PREFIX": "-",
     "timezone": "Asia/Ho_Chi_Minh",
     "REFRESH": "43200000",
     "MAX_BALANCE_LIMIT": "-1"
